  connection, returning the senders address as an IPv4-mapped address 
  (IPV6_V6ONLY socket option is not implemented).

Bugs fixed
----------
 - bug 1319 - Fix Ipv6RawSocketImpl Icmpv6 filter
 - bug 1318 - Asserts for IPv6 malformed packets
 - bug 1357 - IPv6 fragmentation fails due to checks about malformed extensions
 - bug 1378 - UdpEchoClient::SetFill () does not set packet size correctly

Known issues
------------
In general, known issues are tracked on the project tracker available
at http://www.nsnam.org/bugzilla/

Release 3.13
==============

Availability
------------
This release is available from: 
http://www.nsnam.org/release/ns-allinone-3.13.tar.bz2

Supported platforms
-------------------
ns-3.13 has been tested on the following platforms.  Not all features are
available on all platforms; check the Installation page on the project wiki.

- Ubuntu 11.10 (32 bit) with g++-4.5.2
- Ubuntu 11.04 (32/64 bit) with g++-4.5.2 
- Ubuntu 10.04.3 LTS (64 bit) with g++-4.4.3, g++-3.4.6 
- OS X Lion with g++-4.2.1
- OS X Snow Leopard with g++-4.2.1 
- Fedora Core 16 (32/64 bit) with g++-4.6.2
  --  however, g++-3.4.6 fails on Fedora 16 i686 
- Fedora Core 14 (64 bit) with g++-4.5.1
- FreeBSD 9.0-RC1 (AMD64) with g++-4.2.1

New user-visible features
-------------------------
- IPv6 address generator with support for duplicate address detection

Bugs fixed
----------
 - bug 962 - list of paths to reach objects contains bogus entries
 - bug 1001 - Buffer::CopyData() doesn't return the number of bytes copied
 - bug 1010 - Uan model sleep patch
 - bug 1020 - Wrong usage of the originator sequence number in HWMP PREP
 - bug 1021 - Beacon collision avoidance in Mesh module works incorrectly
 - bug 1039 - Nagle's algorithm in TCP 
 - bug 1055 - Wrong UAN's Thorp absorption loss model formula
 - bug 1059 - Unable to load trace files created from SUMO and TraNS Lite
 - bug 1112 - Advance m_nextTxSequence upon retransmit after RTO 